<resources>
    <string name="app_name">Deliverable1</string>
    <string name="title">Fitness App Manager</string>
    <string name="button_admin">Admin</string>
    <string name="button_instructor">Instructor</string>
    <string name="button_member">Gym Member</string>

    <string name="login">Login</string>
    <string name="admin_login">Admin Login</string>
    <string name="register">Register</string>
    <string name="hint_username">Please enter your username</string>
    <string name="text_username">Username</string>
    <string name="hint_password">Please enter your password</string>
    <string name="text_password">Password</string>

    <string name="admin_username">admin</string>
    <string name="admin_role">Admin</string>

    <string name="admin_page">Admin Page</string>
    <string name="textView_class_menu">Class and Account Menu</string>
    <string name="textView_manage_accounts">Manage Accounts</string>
    <string name="edit_text_class_name">Please enter a Class name</string>
    <string name="edit_text_class_description">Enter a Class description</string>
    <string name="add_class">Add Class</string>
    <string name="remove_class">Remove Class</string>
    <string name="manage_accounts">Manage Accounts</string>
    <string name="instructor_accounts">Instructor Accounts</string>
    <string name="member_accounts">Member Accounts</string>

    <string name="placeholder">Placeholder</string>
    <string name="thank">Thanks!</string>
    <string name="welcome_admin">Welcome admin! You are logged in as an Admin</string>
    <string name="default_displays_all_classes_tap_on_entry_to_view_details_tap_view_all_classes_button_to_reset">Default: displays all classes (tap an entry to view details)</string>

    <string-array name="difficulty_level">
        <item>Beginner</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>

    <string-array name="time_interval">
        <item>0.5 hours</item>
        <item>1 hour</item>
        <item>1.5 hours</item>
        <item>2 hours</item>
        <item>2.5 hours</item>
        <item>3 hours</item>
    </string-array>

    <string-array name="start_time">
        <item>07:00</item>
        <item>07:30</item>
        <item>08:00</item>
        <item>08:30</item>
        <item>09:00</item>
        <item>09:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
    </string-array>

    <string-array name="day_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

</resources>