<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sky_blue"
    android:orientation="vertical"
    tools:context=".AdminActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_orange"
        android:text="@string/admin_page"
        android:textAlignment="center"
        android:textColor="#616161"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textView_class_menu"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:background="@color/teal_700"
            android:layout_margin="20dp" />

        <EditText
            android:id="@+id/editText_class_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:hint="@string/edit_text_class_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/editText_class_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:ems="10"
            android:hint="@string/edit_text_class_description"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_addClass"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="8"
                android:background="@color/light_orange"
                android:text="@string/add_class" />

            <Button
                android:id="@+id/button_accounts"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="6dp"
                android:layout_weight="8"
                android:background="@color/light_orange"
                android:text="@string/manage_accounts" />
        </LinearLayout>

    </LinearLayout>


    <ListView
        android:id="@+id/listview_classes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>


</LinearLayout>