<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/sky_blue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textColor="@color/light_white"
            android:layout_marginTop="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_Admin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_admin"
            android:background="@color/light_orange"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/button_Instructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_instructor"
            android:background="@color/light_orange"
            android:layout_margin="5dp"/>

        <Button
            android:id="@+id/button_Member"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_member"
            android:background="@color/light_orange"
            android:layout_margin="5dp"/>

    </LinearLayout>


</LinearLayout>